fixed position absolute issues on firefox

--- a/_sass/_tracks.scss
+++ b/_sass/_tracks.scss
@@ -21,14 +21,14 @@ section#track-description {
   }
 
   .text {
-    border-left: 8px solid $light-blue;
+    border-left: 2px solid $light-blue;
   }
 }
 
 #tour {
   section#tour-stops {
     .tour-stops {
-      .image-container {
+      .track-container {
         position: relative;
         display: flex;
         justify-content: center;
@@ -36,6 +36,13 @@ section#track-description {
 
         .overlay {
           position: absolute;
+          width: 100%;
+          height: 100%;
+          top: 0;
+          left: 0;
+          display: flex;
+          justify-content: center;
+          align-items: center;
 
           h1 {
             font-family: $numbers-font;
